--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -391,27 +391,32 @@ main .main__wrapper .main-products__desc {
 }
 main .main__wrapper .main-products__desc .error {
   display: none;
-  max-width: 586px;
-  min-width: 300px;
-  max-height: 253px;
-  min-height: 200px;
-  width: 40.694vw;
-  height: 17.569vw;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
   position: fixed;
-  left: 50%;
-  margin-left: -150px;
-  top: 50%;
-  margin-top: -100px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99;
 }
 main .main__wrapper .main-products__desc .error__container {
+  max-width: 616px;
+  max-height: 253px;
+  min-width: 300px;
+  min-height: auto;
+  width: 40.486vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   gap: 32px;
-  padding: 32px;
-  z-index: 9999;
+  padding: 32px 15px;
   background-color: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
 }
 main .main__wrapper .main-products__desc .error__container--title {
   font-family: "Roboto Condensed", sans-serif;
@@ -428,6 +433,7 @@ main .main__wrapper .main-products__desc .error__container--mess {
   font-size: var(--fz-filter);
   line-height: 150%;
   text-align: center;
+  padding: 0 32px;
   color: #001A31;
 }
 main .main__wrapper .main-products__desc .error__container--mess span {
@@ -451,17 +457,6 @@ main .main__wrapper .main-products__desc .error__container--btn span {
   text-align: center;
   letter-spacing: 0.05em;
   color: #FFFFFF;
-}
-main .main__wrapper .main-products__desc .error::after {
-  position: fixed;
-  content: "";
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: #000000;
-  opacity: 0.5;
-  z-index: -1;
 }
 main .main__wrapper .main-products__name {
   margin-bottom: 16px;
