--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,7 @@ html {
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
+  display: block;
   box-sizing: border-box;
 }
 
