--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -22,7 +22,7 @@ html{
 
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	// display: block;
+	display: block;
 	box-sizing: border-box;
 }
 
